Add enhanced features: click sounds, theme customization, board size adjustment, and improved UI

--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 <div class="container">
   <h1>Gomoku</h1>
   <div id="mode-buttons">
-    <button id="pvp-btn">Player vs Player</button>
-    <button id="pvc-btn">Player vs Computer</button>
+    <button id="pvp-btn">2 Players</button>
+    <button id="pvc-btn">1 Player</button>
+    <button id="theme-btn">Theme</button>
+    <button id="size-down-btn">Size -</button>
+    <button id="size-up-btn">Size +</button>
   </div>
-  <div id="board" class="hidden"></div>
+  <div id="board"></div>
   <div id="message"></div>
   <button id="restart-btn" class="hidden">Restart</button>
 </div>
