Cancel hint animation when user places a stone

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
   <canvas id="fireworks"></canvas>
   <div id="victory-message"></div>
   <button id="restart-btn" class="hidden">Restart</button>
+  <button id="reverse-btn" class="hidden">Undo</button>
+  <button id="help-btn" class="hidden">Help Me</button>
+  <footer class="credit">
+    Created by Li Zheng (<a href="mailto:li_zheng@outlook.com">li_zheng@outlook.com</a>). AI assisted.
+  </footer>
 </div>
 <script src="script.js"></script>
 </body>
