--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <button id="reverse-btn" class="hidden">Undo</button>
   <button id="help-btn" class="hidden">Help Me</button>
   <footer class="credit">
-    Created by Li Zheng (<a href="mailto:li_zheng@outlook.com">li_zheng@outlook.com</a>). AI assisted.
+    Created by Li Zheng (<a href="mailto:li_zheng@outlook.com">li_zheng@outlook.com</a>). Sure it's AI assisted.
   </footer>
 </div>
 <script src="script.js"></script>
