Add Chinese name to title

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="container">
-  <h1>Gomoku</h1>
+  <h1>Gomoku 五子棋</h1>
   <div id="message"></div>
   <div id="mode-buttons">
     <button id="pvp-btn">PvP</button>
