Update credit text wording

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <canvas id="fireworks"></canvas>
   <div id="victory-message"></div>
   <footer class="credit">
-    Created by Li Zheng (<a href="mailto:li_zheng@outlook.com">li_zheng@outlook.com</a>). Sure it's AI assisted.
+    Created by Li Zheng (<a href="mailto:li_zheng@outlook.com">li_zheng@outlook.com</a>). Of course it's AI assisted.
   </footer>
 </div>
 <script src="script.js"></script>
