Add maximize board feature, AI vs AI mode, long-press shortcuts, and dynamic title updates

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <button id="theme-btn">Theme</button>
       <button id="size-down-btn">Size -</button>
       <button id="size-up-btn">Size +</button>
+      <button id="maximize-btn" title="Maximize Board">⛶</button>
     </div>
     <div id="game-buttons">
       <button id="restart-btn" class="hidden">Restart</button>
