Add pause/continue AI, long-press feedback, theme names, and Light Pink theme
Features added:
- Pause AI button for AI vs AI mode with continue/convert to AI Mode
- Long-press feedback messages for all actions (AI Mode, Theme, Size+, Size-)
- Theme name display on theme change
- Light Pink theme (9th theme option)
- Keyboard shortcut 'f' to toggle maximize mode
- Prevent double-action on long-press (fix click triggering after long-press)
- Dynamic button positioning (maximize button moves between containers)

UI Improvements:
- User feedback for all long-press shortcuts
- Theme names: Classic Wood, Light Bamboo, Dark Cherry, Green Jade, Blue Marble, Slate Gray, Amethyst, Terracotta, Light Pink
- Pause AI button positioned left of Restart button
- Messages auto-clear after 2 seconds

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <button id="maximize-btn" title="Maximize Board">⛶</button>
     </div>
     <div id="game-buttons">
+      <button id="pause-ai-btn" class="hidden">Pause AI</button>
       <button id="restart-btn" class="hidden">Restart</button>
       <button id="reverse-btn" class="hidden">Undo</button>
       <button id="help-btn" class="hidden">Help Me</button>
