Minimalistic buttons and smooth title fade/slide on maximize\n\n- All buttons: light solid color, subtle border, minimal hover\n- Title: smooth fade and slide up when maximizing for elegant transition

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
 <div class="container">
+  <div id="landscape-lock" class="hidden">
+    Please rotate phone to vertical to start Gomoku.
+  </div>
   <h1>Gomoku 五子棋</h1>
   <div id="message"></div>
   <div class="button-container">
